// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chips should render component with appearanceTypeFilled prop  1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: inline-flex;
  align-items: center;
  box-sizing: border-box;
  position: relative;
  max-width: 190px;
  user-select: none;
  cursor: default;
  background-color: var(--admiral-color-Opacity_Neutral8, #00000014);
  border: none;
  border-radius: 16px;
  height: 32px;
  padding: 6px 12px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c0>* {
  pointer-events: auto;
}

.c0:focus-visible {
  outline: 0;
}

.c0:focus-visible:before {
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-radius: 20px;
  content: '';
  display: block;
  position: absolute;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  pointer-events: none;
}

.c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-flex;
  height: 20px;
}

.c1 svg {
  height: 20px;
  width: 20px;
}

.c1 svg *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral50, #74767B);
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

<body>
    <div>
      <div
        class="c0"
        tabindex="0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            test
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: inline-flex;
  align-items: center;
  box-sizing: border-box;
  position: relative;
  max-width: 190px;
  user-select: none;
  cursor: default;
  background-color: var(--admiral-color-Opacity_Neutral8, #00000014);
  border: none;
  border-radius: 16px;
  height: 32px;
  padding: 6px 12px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

.c0>* {
  pointer-events: auto;
}

.c0:focus-visible {
  outline: 0;
}

.c0:focus-visible:before {
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-radius: 20px;
  content: '';
  display: block;
  position: absolute;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  pointer-events: none;
}

.c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-flex;
  height: 20px;
}

.c1 svg {
  height: 20px;
  width: 20px;
}

.c1 svg *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral50, #74767B);
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

<div>
    <div
      class="c0"
      tabindex="0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          test
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Chips should render component with selected prop  1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: inline-flex;
  align-items: center;
  box-sizing: border-box;
  position: relative;
  max-width: 190px;
  user-select: none;
  cursor: pointer;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: 1px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-radius: 16px;
  height: 32px;
  padding: 5px 11px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0>* {
  pointer-events: auto;
}

.c0:focus-visible {
  outline: 0;
}

.c0:focus-visible:before {
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-radius: 20px;
  content: '';
  display: block;
  position: absolute;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  pointer-events: none;
}

.c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-flex;
  height: 20px;
}

.c1 svg {
  height: 20px;
  width: 20px;
}

.c1 svg *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

<body>
    <div>
      <div
        class="c0"
        tabindex="0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            test
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: inline-flex;
  align-items: center;
  box-sizing: border-box;
  position: relative;
  max-width: 190px;
  user-select: none;
  cursor: pointer;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: 1px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-radius: 16px;
  height: 32px;
  padding: 5px 11px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0>* {
  pointer-events: auto;
}

.c0:focus-visible {
  outline: 0;
}

.c0:focus-visible:before {
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-radius: 20px;
  content: '';
  display: block;
  position: absolute;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  pointer-events: none;
}

.c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-flex;
  height: 20px;
}

.c1 svg {
  height: 20px;
  width: 20px;
}

.c1 svg *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

<div>
    <div
      class="c0"
      tabindex="0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          test
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Chips should render default component 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: inline-flex;
  align-items: center;
  box-sizing: border-box;
  position: relative;
  max-width: 190px;
  user-select: none;
  cursor: default;
  background-color: transparent;
  border: 1px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-radius: 16px;
  height: 32px;
  padding: 5px 11px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0>* {
  pointer-events: auto;
}

.c0:focus-visible {
  outline: 0;
}

.c0:focus-visible:before {
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-radius: 20px;
  content: '';
  display: block;
  position: absolute;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  pointer-events: none;
}

.c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-flex;
  height: 20px;
}

.c1 svg {
  height: 20px;
  width: 20px;
}

.c1 svg *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

<body>
    <div>
      <div
        class="c0"
        tabindex="0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            test
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: inline-flex;
  align-items: center;
  box-sizing: border-box;
  position: relative;
  max-width: 190px;
  user-select: none;
  cursor: default;
  background-color: transparent;
  border: 1px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-radius: 16px;
  height: 32px;
  padding: 5px 11px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0>* {
  pointer-events: auto;
}

.c0:focus-visible {
  outline: 0;
}

.c0:focus-visible:before {
  border: 2px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-radius: 20px;
  content: '';
  display: block;
  position: absolute;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  pointer-events: none;
}

.c1 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-flex;
  height: 20px;
}

.c1 svg {
  height: 20px;
  width: 20px;
}

.c1 svg *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

<div>
    <div
      class="c0"
      tabindex="0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          test
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
